# solrindexing

./: README.md  pyproject.toml  setup.cfg
script/: indexdata.py
solrindexer/: __init__.py  indexdata.py  searchindex.py
src/solrindexer/: __init__.py  searchindex.py
src/solrindexer.egg-info/: SOURCES.txt
src/solrindexer/solrindexer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
