[metadata]
name = solrindexer
version = attr: solrindexer.__version__
author = MET Norway
author_email = steingod@met.no
description = Tool for indexing MMD files in to Solr
url = https://github.com/johtoblan/solrindexing
long_description = file: README.md
long_description_content_type = text/markdown

[flake8]
ignore = E221,E226,E228,E241
max-line-length = 99
